test/negative/multiple_same_variables.net
INPUT a
OUTPUT b
VAR a, b, c, c
IN
b = NOT a
